# yzionalization

./: .gitignore  CMakeLists.txt  README.md
contrib/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/core/: reader.cpp  reader.h  translator.cpp
src/include/: translator.h
src/test_code/: CMakeLists.txt  main.cpp
src/tests/: CMakeLists.txt  reader_test.cpp
src/tests/etc/: path.in.h
src/tests/input/: en_en.txt
